--- a/MUSA611_Midterm/index.html
+++ b/MUSA611_Midterm/index.html
@@ -6,7 +6,13 @@
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.4.0/leaflet.css" integrity="sha256-YR4HrDE479EpYZgeTkQfgVJq08+277UXxMLbi/YP69o=" crossorigin="anonymous" />
     <link rel="stylesheet" href="css/style.css" />
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
   </head>
+  <style>
+    body{
+      font-family: 'Montserrat', sans-serif;
+    }
+  </style>
   <body>
     <!-- Slides -->
     <div class="slides">
